Fixed placeholder vertical alignment

--- a/packages/survey-creator-core/src/components/tabs/designer.scss
+++ b/packages/survey-creator-core/src/components/tabs/designer.scss
@@ -19,12 +19,6 @@ svc-tab-designer {
   }
 }
 
-.svc-tab-designer--with-place-holder .svc-tab-designer_content {
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-}
-
 .svc-tab-designer--with-place-holder .svc-designer-header {
   min-width: calcSize(84);
 }
@@ -96,6 +90,15 @@ svc-tab-designer {
 .svc-tab-designer_content {
   padding-inline-start: var(--ctr-survey-page-margin-right, calcSize(2));
   padding-inline-end: var(--ctr-survey-page-margin-left, calcSize(2));
+}
+
+.svc-tab-designer--with-place-holder {
+  .svc-tab-designer_content {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    min-height: 100%;
+  }
 }
 
 .svc-tab-designer--with-page-navigator {
